--- a/src/components/feature/portfolio/Welcome/Welcome.scss
+++ b/src/components/feature/portfolio/Welcome/Welcome.scss
@@ -75,5 +75,9 @@
       font-size: 0.9em;
       color: rgba(color.$bg, 0.9);
     }
+    svg {
+      width: 100%;
+      height: 100%;
+    }
   }
 }
