--- a/src/components/feature/portfolio/Welcome/Welcome.scss
+++ b/src/components/feature/portfolio/Welcome/Welcome.scss
@@ -52,18 +52,32 @@
   }
 
   .bio {
+    display: block;
     width: 90dvw;
     text-align: center;
+    margin: auto;
+
+    .hidden {
+      opacity: 0;
+    }
+
     p {
       margin-bottom: 4px;
     }
-    margin: auto;
-    // for scroll-indicator
-    padding-bottom: 128px;
+
+    position: relative;
+    .bio_animation {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: color.$bg;
+    }
   }
 
-  .bio_placeholder {
-    height: 400px;
+  .indicator-space {
+    height: 128px;
   }
 
   .icon-and-text {
