--- a/src/components/common/main.scss
+++ b/src/components/common/main.scss
@@ -1,11 +1,9 @@
-/*!
- * main.scss
- *
- * CopyRight (c) 2021-2023 Watasuke
- * Email  : <watasuke102@gmail.com>
- * Twitter: @Watasuke102
- * This software is released under the MIT SUSHI-WARE License.
- */
+// main.scss
+//
+// CopyRight (c) 2021-2023 Watasuke
+// Email  : <watasuke102@gmail.com>
+// Twitter: @Watasuke102
+// This software is released under the MIT SUSHI-WARE License.
 @use './color';
 
 // reseter.css
