--- a/src/components/feature/Article/Article.scss
+++ b/src/components/feature/Article/Article.scss
@@ -1,12 +1,9 @@
-/*!
- * Article.scss
- *
- * CopyRight (c) 2021-2023 Watasuke
- * Email  : <watasuke102@gmail.com>
- * Twitter: @Watasuke102
- * This software is released under the MIT SUSHI-WARE License.
- */
-
+// Article.scss
+//
+// CopyRight (c) 2021-2023 Watasuke
+// Email  : <watasuke102@gmail.com>
+// Twitter: @Watasuke102
+// This software is released under the MIT SUSHI-WARE License.
 @use '../../common/color.scss';
 
 .Article-container {
