--- a/src/components/feature/Article/BlogContent/BlogContent.scss
+++ b/src/components/feature/Article/BlogContent/BlogContent.scss
@@ -1,12 +1,9 @@
-/*!
- * BlogContent.scss
- *
- * CopyRight (c) 2021-2023 Watasuke
- * Email  : <watasuke102@gmail.com>
- * Twitter: @Watasuke102
- * This software is released under the MIT SUSHI-WARE License.
- */
-
+// BlogContent.scss
+//
+// CopyRight (c) 2021-2023 Watasuke
+// Email  : <watasuke102@gmail.com>
+// Twitter: @Watasuke102
+// This software is released under the MIT SUSHI-WARE License.
 @use '../../../common/color.scss';
 
 .BlogContent-container {
