--- a/src/components/feature/Article/TableOfContents.scss
+++ b/src/components/feature/Article/TableOfContents.scss
@@ -1,12 +1,9 @@
-/*!
- * TableOfContents.scss
- *
- * CopyRight (c) 2021-2023 Watasuke
- * Email  : <watasuke102@gmail.com>
- * Twitter: @Watasuke102
- * This software is released under the MIT SUSHI-WARE License.
- */
-
+// TableOfContents.scss
+//
+// CopyRight (c) 2021-2023 Watasuke
+// Email  : <watasuke102@gmail.com>
+// Twitter: @Watasuke102
+// This software is released under the MIT SUSHI-WARE License.
 .toc-1 {
   font-weight: bolder;
 }
