--- a/src/components/feature/portfolio/PortfolioContainer.scss
+++ b/src/components/feature/portfolio/PortfolioContainer.scss
@@ -1,11 +1,9 @@
-/*!
- * PortfolioContainer.scss
- *
- * CopyRight (c) 2021-2023 Watasuke
- * Email  : <watasuke102@gmail.com>
- * Twitter: @Watasuke102
- * This software is released under the MIT SUSHI-WARE License.
- */
+// PortfolioContainer.scss
+//
+// CopyRight (c) 2021-2023 Watasuke
+// Email  : <watasuke102@gmail.com>
+// Twitter: @Watasuke102
+// This software is released under the MIT SUSHI-WARE License.
 #PortfolioContainer-container,
 #PortfolioContainer-background {
   position: fixed;
