--- a/src/components/feature/portfolio/PortfolioContainer.scss
+++ b/src/components/feature/portfolio/PortfolioContainer.scss
@@ -11,7 +11,7 @@
   left: 0;
   height: 100vh;
   width: 100vw;
-  padding: 15px;
+  padding: 0;
   overflow-x: hidden;
 }
 #PortfolioContainer-container {
@@ -36,7 +36,6 @@
   top: 0;
   left: 0;
   height: 100vh;
-  width: 100vw;
   overflow-x: hidden;
   div[id^='portfolio'] {
     position: relative !important;
