--- a/src/components/pages/portfolio/History/EventCard.scss
+++ b/src/components/pages/portfolio/History/EventCard.scss
@@ -83,14 +83,13 @@
       .expand_icon {
         grid-row: 2 / 3;
         grid-column: 2 / 3;
-        margin-top: auto;
         margin-left: auto;
         margin-right: 0;
-        width: 32px;
-        height: 32px;
+        width:  44px;
+        height: 44px;
         svg {
-          width: 32px;
-          height: 32px;
+          width: 100%;
+          height: 100%;
         }
       }
     }
@@ -139,6 +138,7 @@
           }
           .expand_icon {
             grid-column: 1 / 2;
+            transition-property: transform;
             margin-left: 0;
             margin-right: auto;
           }
