add: editor>Monaco editor

--- a/common/src/css/base.css
+++ b/common/src/css/base.css
@@ -39,8 +39,9 @@ a:hover {
 }
 
 code {
-  font-family: 'Moralerspace Krypton NF', 'Monaspace Krypton', MyricaM, 'MyricaM M', 'Source Code Pro', 'Ubuntu Mono',
-    'Ubuntu Monospace', Consolas, monospace;
+  font-family:
+    'Moralerspace Krypton NF', 'Monaspace Krypton', MyricaM, 'MyricaM M',
+    'Source Code Pro', 'Ubuntu Mono', 'Ubuntu Monospace', Consolas, monospace;
 }
 
 table {
