update: use smooth scroll
It was prevented because old portfolio uses scroll, but it's no longer
used

--- a/common/src/css/base.css
+++ b/common/src/css/base.css
@@ -1,7 +1,7 @@
 @import 'https://cdn.jsdelivr.net/gh/krishdevdb/reseter.css@1.20/css/reseter.min.css';
 
 * {
-  scroll-behavior: auto;
+  scroll-behavior: smooth;
 }
 
 ::before,
