--- a/common/src/css/base.css
+++ b/common/src/css/base.css
@@ -16,6 +16,7 @@
 }
 
 :root {
+  interpolate-size: allow-keywords;
   font-family: 'M PLUS Rounded 1c', sans-serif;
   background-color: #282c34;
   color: #abb2bf;
