--- a/common/src/css/base.css
+++ b/common/src/css/base.css
@@ -20,6 +20,7 @@
   font-family: 'M PLUS Rounded 1c', sans-serif;
   background-color: #282c34;
   color: #abb2bf;
+  text-autospace: normal;
   scrollbar-width: thin;
   scrollbar-color: #abb2bf transparent;
 }
